fix scrollbar style

--- a/page/macos.scss
+++ b/page/macos.scss
@@ -7,6 +7,8 @@ $panel-border-color-light: rgb(0 0 0 / 17.5%);
 $vertical-border-color-light: rgba(224, 224, 224, $panel-alpha);
 $text-color-light: rgb(0 0 0 / 70%);
 $label-color-light: rgb(128 128 128);
+$thumb-color-light: rgb(81 81 81 / 33.3%);
+$thumb-hover-color-light: rgb(45 45 45 / 38.9%);
 
 /* dark */
 $panel-color-dark: rgba(60, 60, 60, $panel-alpha);
@@ -14,6 +16,8 @@ $panel-border-color-dark: rgb(0 0 0 / 47.5%);
 $vertical-border-color-dark: rgba(85, 85, 85, $panel-alpha);
 $text-color-dark: rgb(255 255 255 / 90%);
 $label-color-dark: rgb(124 124 124);
+$thumb-color-dark: rgba(153, 153, 153, $panel-alpha); /* Not perfect. It shouldn't be blended with background. Same below. */
+$thumb-hover-color-dark: rgba(214, 214, 214, $panel-alpha);
 
 /* accent color */
 $light-blue: rgb(0 90 216);
@@ -115,6 +119,15 @@ $dark-graphite: rgb(105 105 105);
       block-size: 100%;
     }
   }
+
+  .hoverables.horizontal-scroll::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .hoverables.horizontal-scroll::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+  }
+  
 
   .label, .comment {
     font-size: 12px;
@@ -230,6 +243,18 @@ $dark-graphite: rgb(105 105 105);
   .hoverables.horizontal-scroll .divider .divider-middle {
     background-color: $panel-color-light;
   }
+
+  .hoverables.horizontal-scroll::-webkit-scrollbar-thumb {
+    background-color: $thumb-color-light;
+  }
+
+  .hoverables.horizontal-scroll::-webkit-scrollbar-track {
+    background-color: $panel-color-light;
+  }
+
+  .hoverables.horizontal-scroll::-webkit-scrollbar-thumb:hover {
+    background-color: $thumb-hover-color-light;
+  }
 }
 
 .macos.dark {
@@ -330,6 +355,19 @@ $dark-graphite: rgb(105 105 105);
 
   .hoverables.horizontal-scroll .divider .divider-middle {
     background-color: $panel-color-dark;
+  }
+
+  /* stylelint-disable-next-line no-descending-specificity */
+  .hoverables.horizontal-scroll::-webkit-scrollbar-thumb {
+    background-color: $thumb-color-dark;
+  }
+
+  .hoverables.horizontal-scroll::-webkit-scrollbar-track {
+    background-color: $panel-color-dark;
+  }
+
+  .hoverables.horizontal-scroll::-webkit-scrollbar-thumb:hover {
+    background-color: $thumb-hover-color-dark;
   }
 }
 
